[package]
name = "meltdown"
version = "0.3.1"
edition = "2021"
license = "0BSD"
readme = "README.md"
description = "A lightweight service manager to help with graceful shutdown of asynchronous applications."
keywords = ["asynchronous", "graceful", "shutdown"]
categories = ["asynchronous"]
repository = "https://github.com/joshua-cooper/meltdown"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
missing_docs = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

[dependencies]
futures-channel = { version = "0.3.31", default-features = false, features = ["alloc"] }
futures-util = { version = "0.3.31", default-features = false, features = ["std"] }
pin-project-lite = "0.2.15"

[dev-dependencies]
pollster = "0.4.0"

[features]
catch-panic = []
tagged = []
